// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gamedata verify spawns should record readable reports and only expected artifacts 1`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "gamedata",
    "verify",
  ],
  "duration": "<duration>",
  "error": null,
  "execution": {
    "origin": "auto",
    "workers": "<workers>",
  },
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "cache": {
      "bytes": 0,
      "entries": 1,
      "hits": 0,
      "misses": 2,
      "refused": 0,
    },
    "checks": [
      {
        "duration": "<duration>",
        "findings": [],
        "status": "skipped",
        "summary": "Every declared source opened",
        "verificationType": "coverage",
      },
      {
        "duration": "<duration>",
        "findings": [],
        "status": "skipped",
        "summary": "No unreachable files",
        "verificationType": "collisions",
      },
      {
        "duration": "<duration>",
        "findings": [],
        "status": "passed",
        "summary": "1/1 spawns valid",
        "verificationType": "spawns",
      },
    ],
    "duration": "<duration>",
    "skippedMounts": [],
    "status": "passed",
  },
}
`;

exports[`gamedata verify spawns should record readable reports and only expected artifacts 2`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "gamedata",
    "verify",
  ],
  "duration": "<duration>",
  "error": "Check failed: 1 finding(s)",
  "execution": {
    "origin": "auto",
    "workers": "<workers>",
  },
  "exitCode": 3,
  "outcome": "checkFailed",
  "result": {
    "cache": {
      "bytes": 0,
      "entries": 1,
      "hits": 0,
      "misses": 2,
      "refused": 0,
    },
    "checks": [
      {
        "duration": "<duration>",
        "findings": [],
        "status": "skipped",
        "summary": "Every declared source opened",
        "verificationType": "coverage",
      },
      {
        "duration": "<duration>",
        "findings": [],
        "status": "skipped",
        "summary": "No unreachable files",
        "verificationType": "collisions",
      },
      {
        "duration": "<duration>",
        "findings": [
          {
            "assetPath": "spawns/all.spawn",
            "message": "Failed to read spawn file: Invalid error: Chunk 0x00000001 at position 60 declares 67940 bytes, 964 remain before source end 1024",
            "ruleId": "spawns.read",
          },
        ],
        "status": "failed",
        "summary": "0/1 spawns valid",
        "verificationType": "spawns",
      },
    ],
    "duration": "<duration>",
    "skippedMounts": [],
    "status": "failed",
  },
}
`;

exports[`gamedata verify spawns should record readable reports and only expected artifacts 3`] = `
[
  {
    "path": "damaged.json",
    "sha256": "2b6b179bf8e2499123e341f6899cab838bf9c91ebc8f80a9b276510b71d793c0",
    "size": 1602,
  },
  {
    "path": "damaged/configs/system.ltx",
    "sha256": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
    "size": 0,
  },
  {
    "path": "damaged/spawns/all.spawn",
    "sha256": "f05ace79ac59bcbc7e41b973187d94af3feadf13d3ee77da4c0427cc717cd32d",
    "size": 1024,
  },
  {
    "path": "valid.json",
    "sha256": "0777ef0f87b4e27d5d768b1ef272f20218b90805690130ebbbde93214685596b",
    "size": 1304,
  },
  {
    "path": "valid/configs/system.ltx",
    "sha256": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
    "size": 0,
  },
  {
    "path": "valid/spawns/all.spawn",
    "sha256": "273c85c97dcf2a9351d81e389a483ab0bad207314ec3a05c081fe2caf3916105",
    "size": 1053148,
  },
]
`;
